# tea-dyn

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  rust-toolchain.toml
.github/workflows/: build.yml
benches/: rolling.rs
python/tea_dyn/: __init__.py
python/tests/: test_base.py
src/: lib.rs  prelude.rs
src/dtype/: mod.rs  object.rs  time.rs
src/dynamic/: macros.rs  mod.rs
src/dynamic/methods/: agg.rs  map.rs  mod.rs
src/dynamic/structs/: array.rs  mod.rs  scalar.rs  series.rs  trust_iter.rs  vec.rs
src/dynamic/structs/array/: cast.rs  mod.rs  ndarray_ext.rs
src/expr/: context.rs  data.rs  expr.rs  expr_core.rs  mod.rs  node.rs
src/expr/data/: from.rs  mod.rs
src/expr/methods/: agg.rs  map.rs  mod.rs  rolling.rs
src/py_dtype/: mod.rs  time.rs
src/pyclass/: from_py.rs  into_py.rs  mod.rs  pyexpr.rs
src/pyclass/conversions/: into_py.rs  mod.rs
src/pyclass/conversions/from_py/: array.rs  context.rs  from_py_any.rs  mod.rs
src/pyclass/from_py/: mod.rs  py_any_ext.rs
src/pyclass/methods/: map.rs
