[package]
name = "tea-dyn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tea_dyn"
crate-type = ["cdylib", "rlib"]

[features]
# default = ["py", "map", "rolling", "time", "pl"]
default = ["map", "rolling", "time", "pl"]
# default = ["map", "time"]
# types
time = ["tevec/time"]

# backends
pl = ["tevec/pl", "pyo3-polars"]
ndarray = ["tevec/ndarray"]

# methods
map = ["tevec/map", "ndarray"]
agg = ["tevec/agg", "ndarray"]
rolling = ["tevec/rolling", "ndarray"]

py = ["pyo3", "numpy", "ndarray"]

[dependencies]
pyo3 = { version = "0.21", optional = true, features = [
    "multiple-pymethods",
    "abi3-py38",
    "chrono",
    "nightly",
] }
numpy = { version = "0.21.0", optional = true }
polars = { version = "0.40", optional = true, default-features = false }
pyo3-polars = { version = "0.14", optional = true, default-features = false }
derive_more = { version = "0.99", default-features = false, features = [
    "from",
    "display",
    "deref",
    "is_variant",
] }
# tea-macros = { git = "https://github.com/Teamon9161/tevec.git", branch = "master" }
tea-macros = { path = "../tevec/tea-macros" }

[dependencies.tevec]
path = "../tevec/tevec"
# git = "https://github.com/Teamon9161/tevec.git"
# branch = "master"
default-features = false
features = []
