[project]
name = "tea-dyn"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "teamon9161", email = "1127972945@qq.com" }]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "pyarrow>=16.1.0",
]

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
# virtual = true
dev-dependencies = [
    "maturin>=1.6.0",
    "spyder-kernels>=2.5.1",
    "pip>=24.0",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "pytest>=8.2.2",
    "polars>=0.20.31",
]

[tool.maturin]
python-source = "python"
module-name = "tea_dyn._rust_dyn"
features = ["pyo3/extension-module"]
